# Student_Score_Prediction

./: .gitignore  Dockerfile  README.md  app.py  main.py  note.txt  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
artifacts/: model.pkl  preprocessor.pkl
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebook/: EDA.ipynb
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py
